--- a/app/src/main/res/layout/learn_pitch.xml
+++ b/app/src/main/res/layout/learn_pitch.xml
@@ -5,12 +5,12 @@
 
     <ImageView
         android:id="@+id/im_animation"
-        android:layout_width="@dimen/dp_164"
+        android:layout_width="@dimen/dp_174"
         android:layout_height="@dimen/dp_116"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="@dimen/dp_32"
         android:layout_marginTop="@dimen/dp_8"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"
+        android:translationX="@dimen/dp_6" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -41,7 +41,7 @@
         android:id="@+id/ll_pitch"
         android:layout_width="@dimen/dp_422"
         android:layout_height="@dimen/dp_121"
-        android:layout_marginStart="@dimen/dp_109"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/dp_130">
 
         <!--   <ImageView
@@ -57,6 +57,7 @@
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/dp_4_5"
+            android:layout_marginLeft="@dimen/dp_12"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian15"
@@ -69,7 +70,8 @@
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
             android:layout_marginBottom="@dimen/dp_12"
-            android:layout_marginStart="@dimen/dp_55"
+            android:layout_marginLeft="@dimen/dp_16"
+            android:layout_toRightOf="@id/im_do"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian14"
@@ -80,9 +82,9 @@
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
             android:layout_marginBottom="@dimen/dp_24"
-            android:layout_marginStart="@dimen/dp_218"
+            android:layout_marginLeft="@dimen/dp_16"
+            android:layout_toRightOf="@id/im_re"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian19"
@@ -93,9 +95,9 @@
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
             android:layout_marginBottom="@dimen/dp_35"
-            android:layout_marginStart="@dimen/dp_273"
+            android:layout_marginLeft="@dimen/dp_16"
+            android:layout_toRightOf="@id/im_mi"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian18"
@@ -105,9 +107,9 @@
             android:id="@+id/im_sol"
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="@dimen/dp_327"
+            android:layout_marginLeft="@dimen/dp_16"
             android:layout_marginTop="@dimen/dp_38"
+            android:layout_toRightOf="@id/im_fa"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian17"
@@ -117,9 +119,9 @@
             android:id="@+id/im_la"
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/dp_221"
+            android:layout_marginLeft="@dimen/dp_16"
             android:layout_marginTop="@dimen/dp_27"
+            android:layout_toRightOf="@id/im_sol"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian16"
@@ -129,9 +131,9 @@
             android:id="@+id/im_si"
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/dp_167"
+            android:layout_marginLeft="@dimen/dp_16"
             android:layout_marginTop="@dimen/dp_15"
+            android:layout_toRightOf="@id/im_la"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian13"
@@ -141,10 +143,9 @@
             android:id="@+id/im_dol"
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="bottom"
-            android:layout_marginEnd="@dimen/dp_112"
+            android:layout_marginLeft="@dimen/dp_16"
             android:layout_marginTop="@dimen/dp_3_5"
+            android:layout_toRightOf="@id/im_si"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian12"
@@ -153,15 +154,14 @@
     <!--//android:layout_marginTop="@dimen/hand_tb_margin_top"-->
     <LinearLayout
         android:id="@+id/llKeys"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/dp_510"
         android:layout_height="@dimen/dp_106"
         android:layout_below="@id/ll_pitch"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="@dimen/dp_80"
         android:background="@drawable/music_yinyuekaung_gangqinkuang"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/dp_42"
-        android:paddingRight="@dimen/dp_42"
+        android:paddingLeft="@dimen/dp_38"
+        android:paddingRight="@dimen/dp_38"
         android:paddingTop="@dimen/dp_8">
 
         <Button
