--- a/app/src/main/res/layout/rhythm.xml
+++ b/app/src/main/res/layout/rhythm.xml
@@ -6,8 +6,38 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/im_yue_pu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/music_yinlv_kuang" />
+        android:src="@drawable/yuelvjiequ2"
+        android:visibility="invisible" />
+
+    <RelativeLayout
+        android:id="@+id/rl_select_song"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/music_yinlv_kuang" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/music_yinlv_lan"
+            android:gravity="center"
+            android:text="测试"
+            android:textSize="@dimen/sp_18" />
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/v_indicator"
+        android:layout_width="@dimen/dp_1"
+        android:layout_height="@dimen/dp_20"
+        android:background="@android:color/black" />
 </RelativeLayout>
