--- a/app/src/main/res/layout/rhythm.xml
+++ b/app/src/main/res/layout/rhythm.xml
@@ -5,13 +5,24 @@
     android:background="@drawable/music_yinlv_bijingtu"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/im_yue_pu"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@drawable/yuelvjiequ2"
-        android:visibility="invisible" />
+        android:layout_centerInParent="true">
+
+        <View
+            android:id="@+id/v_indicator"
+            android:layout_width="@dimen/dp_1"
+            android:layout_height="@dimen/dp_20"
+            android:background="@android:color/black" />
+
+        <ImageView
+            android:id="@+id/im_yue_pu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/music_yinlv_xiaoxingxing"
+            android:visibility="invisible" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/rl_select_song"
@@ -35,9 +46,5 @@
             android:textSize="@dimen/sp_18" />
     </RelativeLayout>
 
-    <View
-        android:id="@+id/v_indicator"
-        android:layout_width="@dimen/dp_1"
-        android:layout_height="@dimen/dp_20"
-        android:background="@android:color/black" />
+
 </RelativeLayout>
