--- a/app/src/main/res/layout/learn_child_song.xml
+++ b/app/src/main/res/layout/learn_child_song.xml
@@ -6,12 +6,12 @@
 
     <ImageView
         android:id="@+id/im_go_home"
-        android:layout_width="@dimen/dp_78"
-        android:layout_height="@dimen/dp_71"
+        android:layout_width="@dimen/dp_48"
+        android:layout_height="@dimen/dp_46"
         android:layout_marginStart="@dimen/dp_16"
         android:layout_marginLeft="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_4"
-        android:src="@drawable/home" />
+        android:src="@drawable/music_return" />
 
     <LinearLayout
         android:layout_width="wrap_content"
