--- a/app/src/main/res/layout/rhythm.xml
+++ b/app/src/main/res/layout/rhythm.xml
@@ -61,7 +61,8 @@
     <RelativeLayout
         android:id="@+id/rl_crontor"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_112"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:visibility="gone">
 
@@ -78,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="54dp"
+            android:layout_marginBottom="@dimen/dp_31"
             android:src="@drawable/music_jiepaiqi_kuaipa" />
 
         <ImageView
