--- a/app/src/main/res/layout/rhythm.xml
+++ b/app/src/main/res/layout/rhythm.xml
@@ -10,8 +10,8 @@
         android:layout_width="@dimen/dp_75"
         android:layout_height="@dimen/dp_36"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="@dimen/dp_17"
         android:layout_marginRight="@dimen/dp_32"
+        android:layout_marginTop="@dimen/dp_17"
         android:src="@drawable/music_yinlv_xiaogedan" />
 
     <ImageView
@@ -107,8 +107,8 @@
             android:layout_width="@dimen/dp_308"
             android:layout_height="@dimen/dp_268"
             android:layout_centerInParent="true"
-            android:paddingTop="@dimen/dp_8"
             android:paddingEnd="@dimen/dp_4"
+            android:paddingTop="@dimen/dp_8"
             android:src="@drawable/music_yinlv_kuang" />
 
         <ImageView
@@ -128,12 +128,13 @@
             android:src="@drawable/music_tingyijwang_xilai" />
 
         <TextView
+            android:id="@+id/tv_song_name"
             android:layout_width="@dimen/dp_248"
             android:layout_height="@dimen/dp_38"
             android:layout_centerInParent="true"
             android:background="@drawable/music_yinlv_lan"
             android:gravity="center_vertical"
-            android:text="《咕咕,你在哪》"
+            android:text="《小星星》"
             android:textColor="@android:color/black"
             android:textSize="@dimen/sp_18"
             android:textStyle="bold" />
