--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -692,4 +692,51 @@
         <item>@drawable/music_8_55</item>
         <item>@drawable/music_8_56</item>
     </array>
+
+    <array name="music_tv_continuation">
+        <item>@drawable/music_9_1</item>
+        <item>@drawable/music_9_2</item>
+        <item>@drawable/music_9_3</item>
+        <item>@drawable/music_9_4</item>
+        <item>@drawable/music_9_5</item>
+        <item>@drawable/music_9_6</item>
+        <item>@drawable/music_9_7</item>
+        <item>@drawable/music_9_8</item>
+        <item>@drawable/music_9_9</item>
+        <item>@drawable/music_9_10</item>
+        <item>@drawable/music_9_11</item>
+        <item>@drawable/music_9_12</item>
+        <item>@drawable/music_9_13</item>
+        <item>@drawable/music_9_14</item>
+        <item>@drawable/music_9_15</item>
+        <item>@drawable/music_9_16</item>
+        <item>@drawable/music_9_17</item>
+        <item>@drawable/music_9_18</item>
+        <item>@drawable/music_9_19</item>
+        <item>@drawable/music_9_20</item>
+        <item>@drawable/music_9_21</item>
+        <item>@drawable/music_9_22</item>
+        <item>@drawable/music_9_23</item>
+        <item>@drawable/music_9_24</item>
+        <item>@drawable/music_9_25</item>
+        <item>@drawable/music_9_26</item>
+        <item>@drawable/music_9_27</item>
+        <item>@drawable/music_9_28</item>
+        <item>@drawable/music_9_29</item>
+        <item>@drawable/music_9_30</item>
+        <item>@drawable/music_9_31</item>
+        <item>@drawable/music_9_32</item>
+        <item>@drawable/music_9_33</item>
+        <item>@drawable/music_9_34</item>
+        <item>@drawable/music_9_35</item>
+        <item>@drawable/music_9_36</item>
+        <item>@drawable/music_9_37</item>
+        <item>@drawable/music_9_38</item>
+        <item>@drawable/music_9_39</item>
+        <item>@drawable/music_9_40</item>
+        <item>@drawable/music_9_41</item>
+        <item>@drawable/music_9_42</item>
+        <item>@drawable/music_9_43</item>
+        <item>@drawable/music_9_44</item>
+    </array>
 </resources>
