--- a/app/src/main/res/layout/music_guess_answer.xml
+++ b/app/src/main/res/layout/music_guess_answer.xml
@@ -135,11 +135,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/music_jieshu_beijing"
+        android:clipChildren="false"
         android:visibility="gone">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/im_back_light"
+            android:layout_width="@dimen/dp_720"
+            android:layout_height="@dimen/dp_720"
             android:scaleType="centerCrop"
             android:src="@drawable/music_baiguang" />
 
