--- a/app/src/main/res/layout/start_learn_song.xml
+++ b/app/src/main/res/layout/start_learn_song.xml
@@ -50,7 +50,8 @@
         android:id="@+id/im_music_bear"
         android:layout_width="@dimen/dp_135"
         android:layout_height="@dimen/dp_164"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/dp_49"
+        android:layout_marginBottom="@dimen/dp_11"
         android:src="@drawable/music_bear_1" />
 </RelativeLayout>
